# cod2

./: .clang-format  CMakeLists.txt  README.md  format.sh  reconstruction_summary.txt  snd.cpp  snd_utils.cpp  todo.c  types.h
EffectsCore/: EffectsCore.h  FxArchive.cpp  FxChannel.cpp  FxCurve.cpp  FxCurve_load_obj.cpp  FxMemMgr.cpp  FxPrimitives.cpp  FxScheduler.cpp  FxScheduler_load_obj.cpp  FxSystem.cpp  FxTemplate.cpp  FxUtil.cpp  Fxexport.cpp  GenericParser2.cpp
bgame/: bg_animation_mp.cpp  bg_jump.cpp  bg_mantle.cpp  bg_misc.cpp  bg_misctables.cpp  bg_pmove.cpp  bg_slidemove.cpp  bg_weapons.cpp  bg_weapons_load_obj.cpp
botlib/: l_memory.cpp  l_precomp.cpp  l_script.cpp
cgame/: cg_effects_load_obj.cpp
cgame_mp/: cg_animtree_mp.cpp  cg_compassfriendlies_mp.cpp  cg_consolecmds_mp.cpp  cg_draw_mp.cpp  cg_drawtools_mp.cpp  cg_ents_mp.cpp  cg_event_mp.cpp  cg_hudelem_mp.cpp  cg_info_mp.cpp  cg_localents_mp.cpp  cg_main_mp.cpp  cg_marks_mp.cpp  cg_newDraw_mp.cpp  cg_players_mp.cpp  cg_playerstate_mp.cpp  cg_predict_mp.cpp  cg_scoreboard_mp.cpp  cg_servercmds_mp.cpp  cg_shellshock.cpp  cg_snapshot_mp.cpp  cg_view_mp.cpp  cg_weapons.cpp  offhandweapons_mp.cpp
client_mp/: cl_cgame_mp.cpp  cl_cin_mp.cpp  cl_console_mp.cpp  cl_input.cpp  cl_keys_mp.cpp  cl_main_mp.cpp  cl_main_pc_mp.cpp  cl_net_chan_mp.cpp  cl_parse_mp.cpp  cl_scrn_mp.cpp  cl_ui_mp.cpp  cl_ui_pc_mp.cpp  screen_placement_mp.cpp
game/: g_load_utils.cpp  g_weapon_load_obj.cpp  q_shared.h
game_mp/: g_active_mp.cpp  g_client_fields_mp.cpp  g_client_mp.cpp  g_client_script_cmd_mp.cpp  g_cmds_mp.cpp  (+17 more)
(+253 files in other folders)
